[package]
name = "power_disc_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
features = [
  "builder",
  "cache",
  "framework",
  "model",
  "standard_framework", 
  "rustls_backend",
  "utils",
]

